--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cookie": "^11.0.1",
+    "@fastify/jwt": "^9.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "fastify": "^5.1.0",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
